bynkc/tests/fixtures/negative/301_http_cache_bad_scope/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(maxAge: 5.minutes, scope: shared)
  on GET("/items") by Visitor () -> Effect[HttpResult[View]] {
    Ok(View { ok: true })
  }
}
